--- a/tests/testdata/mj-navbar-expected.html
+++ b/tests/testdata/mj-navbar-expected.html
@@ -130,11 +130,9 @@
                   <tbody>
                     <tr>
                       <td align="center" style="font-size:0px;word-break:break-word;">
-                        <!--[if !mso><!-->
-                        <input type="checkbox" id="c61192b4be1449f8" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;" />
-                        <!--<![endif]-->
+                        <!--[if !mso]><!--><input type="checkbox" id="a043bae1603803a8" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;" /><!--<![endif]-->
                         <div class="mj-menu-trigger" style="display:none;max-height:0px;max-width:0px;font-size:0px;overflow:hidden;">
-                          <label for="c61192b4be1449f8" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:#ffffff;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
+                          <label for="a043bae1603803a8" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:#ffffff;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
                             <span class="mj-menu-icon-open" style="mso-hide:all;"> &#9776; </span>
                             <span class="mj-menu-icon-close" style="display:none;mso-hide:all;"> &#8855; </span>
                           </label>
